// Copyright Â© 2020 AMIS Technologies
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bulletproof;

option go_package = "github.com/getamis/alice/crypto/proofofreserve/bulletproof";

message ProverMessage {
  repeated bytes Lpoints = 1;
  repeated bytes Rpoints = 2;
  bytes WIPA = 3;
  bytes WIPB = 4;
  bytes r = 5;
  bytes s = 6;
  bytes delta =7;
  bytes A = 8;
  repeated bytes saltInnerZKWIP = 9;
  bytes saltFinalZKWIP = 10;
  bytes saltY = 11;
  bytes saltZ = 12;
}
 